[package]
name = "backslash"
version = "0.2.0"
authors = ["Ryan Geary <rtgnj42@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/theryangeary/choose"
readme = "readme.md"
description = "library for parsing escape characters"
documentation = "https://docs.rs/backslash"
homepage = "https://crates.io/crates/backslash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
